<?xml version="1.0" encoding="utf-8"?>


<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nameEtLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nameEt"
                            android:hint="@string/name_hint"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/locationEtLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="@+id/nameEtLayout"
                        app:layout_constraintStart_toStartOf="@+id/nameEtLayout"
                        app:layout_constraintTop_toBottomOf="@id/nameEtLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etLocation"
                            android:hint="@string/location_hint"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/stateEtLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="@+id/locationEtLayout"
                        app:layout_constraintStart_toStartOf="@+id/locationEtLayout"
                        app:layout_constraintTop_toBottomOf="@id/locationEtLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etState"
                            android:hint="@string/state_hint"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/countyEtLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="@id/stateEtLayout"
                        app:layout_constraintStart_toStartOf="@id/stateEtLayout"
                        app:layout_constraintTop_toBottomOf="@id/stateEtLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etCounty"
                            android:hint="@string/county_hint"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/townshipEtLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="@id/countyEtLayout"
                        app:layout_constraintStart_toStartOf="@id/countyEtLayout"
                        app:layout_constraintTop_toBottomOf="@id/countyEtLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etTownship"
                            android:hint="@string/township_hint"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/rangeEtLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="@id/townshipEtLayout"
                        app:layout_constraintStart_toStartOf="@id/townshipEtLayout"
                        app:layout_constraintTop_toBottomOf="@id/townshipEtLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etRange"
                            android:hint="@string/rang_hint"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/sectionEtLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="@id/rangeEtLayout"
                        app:layout_constraintStart_toStartOf="@id/rangeEtLayout"
                        app:layout_constraintTop_toBottomOf="@id/rangeEtLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etSection"
                            android:hint="@string/section_hint"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/firstYearEtLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="@id/sectionEtLayout"
                        app:layout_constraintStart_toStartOf="@id/sectionEtLayout"
                        app:layout_constraintTop_toBottomOf="@id/sectionEtLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etFirstYear"
                            android:hint="@string/firstyear_hint"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>


        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addCemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:clickable="true"
            android:src="@drawable/ic_baseline_add_24_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
